--- a/tigaserver_app/templates/rest_framework/api.html
+++ b/tigaserver_app/templates/rest_framework/api.html
@@ -1,5 +1,9 @@
 {% extends "rest_framework/base.html" %}
 
+{% block title %}
+        Tigaserver API
+{% endblock %}
+
 {% block branding %}
         <a class='brand' rel="nofollow" href='/api'>Tigaserver API</a>
 {% endblock %}
