--- a/tigaserver_app/templates/rest_framework/api.html
+++ b/tigaserver_app/templates/rest_framework/api.html
@@ -7,3 +7,9 @@
 {% block branding %}
         <a class='brand' rel="nofollow" href='/api'>Tigaserver API</a>
 {% endblock %}
+
+{% block userlinks %}
+        <li><a href="/api/docs/">Documentation</a></li>
+        {{ block.super}}
+{% endblock %}
+
