about to remove rest-swagger because it does not add anything above rest self-documentation and it has flaws.

--- a/tigaserver_app/templates/rest_framework/api.html
+++ b/tigaserver_app/templates/rest_framework/api.html
@@ -1,7 +1,7 @@
 {% extends "rest_framework/base.html" %}
 
 {% block title %}
-        Tigaserver API
+        Tigapi
 {% endblock %}
 
 {% block branding %}
