--- a/tigaserver_app/templates/rest_framework/api.html
+++ b/tigaserver_app/templates/rest_framework/api.html
@@ -1,7 +1,7 @@
 {% extends "rest_framework/base.html" %}
 
 {% block title %}
-        Tigapi
+        Tigaserver
 {% endblock %}
 
 {% block branding %}
@@ -9,7 +9,13 @@
 {% endblock %}
 
 {% block userlinks %}
-        <li><a href="/api/docs/">Documentation</a></li>
+        <li><a href="/api/users/">Users</a></li>
+        <li><a href="/api/missions/">Missions</a></li>
+        <li><a href="/api/reports/">Reports</a></li>
+        <li><a href="/api/responses/">Responses</a></li>
+        <li><a href="/api/photos/">Photos</a></li>
+        <li><a href="/api/fixes/">Fixes</a></li>
+        <li><a href="/api/configurations/">Configurations</a></li>
         {{ block.super}}
 {% endblock %}
 
