--- a/tigamap/templates/tigamap/base.html
+++ b/tigamap/templates/tigamap/base.html
@@ -152,7 +152,10 @@
 
 	<div id="map" style="width: 100%; height: 100%"></div>
 
-		<img src={% static "tigamap/tigatrapp_logo.png" %} style="position:absolute;width:30%;bottom:20px; right:10px">
+    {% block logo %}
+
+
+    {% endblock %}
 
 	</body>
 
