--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,4 +1,4 @@
-{% extends "admin/base.html" %}
+{% extends "admin/ca.html" %}
 {% load i18n %}
 
 {% block title %}{{ title }} | {% trans 'Tigaserver admin' %}{% endblock %}
