ca help text correction

--- a/tigahelp/templates/tigahelp/help_ca.html
+++ b/tigahelp/templates/tigahelp/help_ca.html
@@ -24,7 +24,7 @@ Aprèn a reconèixer el mosquit tigre (assegura't que no el confons amb altres m
 <h2>Participa compartint dades</h2>
 Utilitza els botons “PARTICIPA” per enviar informes de nous llocs de cria en espais públics i de troballes de mosquit tigre. Trobaràs informació detallada clicant l'icona (i).
 
-<h2>Mantén les teves dades actualitzades</h2>
+<h2>Mantingues les teves dades actualitzades</h2>
 Utilitza el botó “EL MEU MAPA” per veure i controlar les teves dades, editar-les si les vols actualitzar o corregir i eliminar-les si creus que són errònies.
 
 <h2>Participa en missions</h2>
