--- a/tigamap/templates/tigamap/coverage_map.html
+++ b/tigamap/templates/tigamap/coverage_map.html
@@ -14,7 +14,7 @@
         [{{ fix.masked_lat }} + 0.5, {{ fix.masked_lon }}],
         [{{ fix.masked_lat }} + 0.5, {{ fix.masked_lon }}  + 0.5],
         [{{ fix.masked_lat }}, {{ fix.masked_lon }} + 0.5],
-        ]).addTo(map);
+        ], {weight: 0.5, fillOpacity: 0.05}).addTo(map);
 
          {% endfor %}
     }
