made grid map demos

--- a/tigamap/templates/tigamap/base.html
+++ b/tigamap/templates/tigamap/base.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 	<title>Tigatrapp Map</title>
 
-    {% leaflet_js %}
-    {% leaflet_css %}
+    {% leaflet_js plugins="ALL" %}
+    {% leaflet_css plugins="ALL" %}
 
   <style>
        .leaflet-container {  /* all maps */
