--- a/tigahelp/templates/tigahelp/help_es.html
+++ b/tigahelp/templates/tigahelp/help_es.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<title>Tigatrapp Help</title>
-<link href={% static "tigahelp/tigastyle.css" %} rel='stylesheet' />
+<link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %}  />
 
 
 
