--- a/tigahelp/templates/tigahelp/license_es.html
+++ b/tigahelp/templates/tigahelp/license_es.html
@@ -7,8 +7,9 @@
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<title>Tigatrapp License</title>
-<link href={% static "tigahelp/tigastyle.css" %} rel='stylesheet' />
-
+<link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %} />
+</head>
+    <body>
 <div class="center">
 <h1>Tigatrapp</h1>
 </div>
