added credits image to about pages

--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -22,8 +22,10 @@
 <p>El projecte compta a més amb el suport de  <a href="http://atrapaeltigre.com/web/ca/qui-som/">vàries institucions públiques i privades</a>.</p>
 
 <p>Les fotografies de l'App Tigatrapp han estat cedides per <a href="http://www.eritja.com">R. Eritja</a>.</p>
- 
-   
+
+<p class='centeredImage'>
+<img src={% static "tigahelp/credits_logos.jpg" %}>
+</p>
 
 </body>
 </html>
