--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -23,6 +23,10 @@
 
 <p>All of the photos used in Tigatrapp were provided by <a href="http://www.eritja.com">R. Eritja</a>. </p>
 
+    <p class='centeredImage'>
+<img src={% static "tigahelp/credits_logos.jpg" %}>
+</p>
+
 
 
 </body>
