--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -25,5 +25,9 @@
 
 <p>Las fotografías de la App Tigatrapp han sido cedidas por <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
+    <p class='centeredImage'>
+<img src={% static "tigahelp/credits_logos.jpg" %}>
+</p>
+
 </body>
 </html>
