--- a/tigahelp/static/tigahelp/tigastyle.css
+++ b/tigahelp/static/tigahelp/tigastyle.css
@@ -10,6 +10,13 @@ h3{
 color:#f6d10a;
 }
 
+.centeredImage{
+text-align:center;
+margin-top:0px;
+margin-bottom:0px;
+padding:0px;
+}
+
 .center{
 text-align: center;
 }
