--- a/tigamap/templates/tigamap/report_map.html
+++ b/tigamap/templates/tigamap/report_map.html
@@ -7,9 +7,8 @@
 <script type="text/javascript">
     function map_init_basic (map, options) {
 
-        var markers_sites = new L.MarkerClusterGroup();
-        var markers_adults = new L.MarkerClusterGroup();
-
+        var adults = L.LayerGroup();
+        var sites = L.LayerGroup();
 
         var YellowIcon = L.Icon.Default.extend({
             options: {
@@ -21,16 +20,21 @@
         {% for report in report_list %}
         {% if report.lat != None and report.lon != None %}
         {% if report.type == "site" %}
-        markers_sites.addLayer(L.marker([{{ report.lat }}, {{ report.lon }}]));
+        sites.addLayer(L.marker([{{ report.lat }}, {{ report.lon }}]));
         {% elif report.type == "adult" %}
-        markers_adults.addLayer(L.marker([{{ report.lat }}, {{ report.lon }}], {icon: yellowIcon}));
+        adults.addLayer(L.marker([{{ report.lat }}, {{ report.lon }}], {icon: yellowIcon}));
         {% endif %}
         {% endif %}
         {% endfor %}
 
-        map.addLayer(markers_sites);
-        map.addLayer(markers_adults);
 
+        var overlayMaps = {
+        "Adults": adults,
+        "Sites": sites
+        };
+
+        adults.addTo(map);
+        L.control.layers(null, overlayMaps).addTo(map);
     }
 </script>
 
