--- a/tigahelp/static/tigahelp/tigastyle.css
+++ b/tigahelp/static/tigahelp/tigastyle.css
@@ -10,6 +10,25 @@ h3{
 color:#f6d10a;
 }
 
+.background{
+background: #ddd;
+}
+
+.main_container{
+margin-left:auto;
+margin-right:auto;
+max-width: 800px;
+background: #fff;
+box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+.text_container{
+padding-top:10px;
+padding-bottom:10px;
+padding-left:40px;
+padding-right: 40px;
+}
+
 .centeredImage{
 text-align:center;
 margin-top:0px;
