--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -6,7 +6,7 @@
 	<head>
 		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-		<title>Tigatrapp Help</title>
+		<title>Sobre Tigatrapp</title>
 <link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %} />
 </head>
     <body>
