--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -6,8 +6,8 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <title>Tigatrapp Help</title>
-    <link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %}/>
+    <title>Sobre Tigatrapp</title>
+<link rel='stylesheet' href={% static "tigahelp/tigastyle.css" %} />
 
 </head>
 <body>
