one more style change on about

--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -38,7 +38,8 @@
         <p>Las fotografías de la App Tigatrapp han sido cedidas por <a href="http://www.eritja.com">R. Eritja</a>.</p>
 
         <p class='centeredImage'>
-            <a href={% static "tigahelp/credits_logos.jpg" %}><img src={% static "tigahelp/credits_logos.jpg" %}></a>
+            <a href='/credits/'><img style='max-width: 100%; height: auto;' src
+                    ={% static "tigahelp/credits_logos.jpg" %}></a>
         </p>
     </div>
 </div>
