--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -29,7 +29,8 @@
 <p>All of the photos used in Tigatrapp were provided by <a href="http://www.eritja.com">R. Eritja</a>. </p>
 
         <p class='centeredImage'>
-            <a href={% static "tigahelp/credits_logos.jpg" %}><img src={% static "tigahelp/credits_logos.jpg" %}></a>
+            <a href='/credits/'><img style='max-width: 100%; height: auto;' src
+                    ={% static "tigahelp/credits_logos.jpg" %}></a>
         </p>
     </div>
 </div>
