--- a/tigamap/templates/tigamap/base.html
+++ b/tigamap/templates/tigamap/base.html
@@ -5,6 +5,9 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 	<title>Tigatrapp Map</title>
 
+    {% leaflet_js %}
+    {% leaflet_css %}
+
   <style>
        .leaflet-container {  /* all maps */
             width:  100%;
